# device-readings

./: .gitignore  Device Readings API.postman_collection.json  README.md  manage.py  pyproject.toml
.github/workflows/: poetry-pytest.yml
device_readings/: settings.py  urls.py  wsgi.py
device_readings/api/: apps.py  models.py  urls.py  views.py
device_readings/api/tests/: conftest.py  model_tests.py  view_tests.py
